--- a/03jquery_exc.html
+++ b/03jquery_exc.html
@@ -45,6 +45,7 @@
             padding-left: 20px;
             font-size: 14px;
         }
+        
     </style>
 </head>
 <body>
@@ -106,10 +107,10 @@
        <label for="checkbox"><input type="checkbox"></label><br>
        <label for="checkbox"><input type="checkbox"></label>
 
-        <p><a href="#">[type="text"]</a> -폼 엘리먼트를 선택할 때는 속성 셀렉터를 사용한다.</p>
-        <p><a href="#">[type="text"]:disabled</a> disabled 속성의 값이 disabled인 엘리먼트를 찾아내는 선택자</p>
-        <p><a href="#">[type="text"]:enabled</a> -enabled속성의 값이 enabled인 엘리먼트를 찾아내는 선택자</p>
-        <p><a href="#">input:checked</a> -체크박스 중 체크가 된 엘리먼트를 찾아내는 선택자</p>
+        <p><a href="#" title="">[type="text"]</a> -폼 엘리먼트를 선택할 때는 속성 셀렉터를 사용한다.</p>
+        <p><a href="#" title="">[type="text"]:disabled</a> disabled 속성의 값이 disabled인 엘리먼트를 찾아내는 선택자</p>
+        <p><a href="#" title="">[type="text"]:enabled</a> -enabled속성의 값이 enabled인 엘리먼트를 찾아내는 선택자</p>
+        <p><a href="#" title="">input:checked</a> -체크박스 중 체크가 된 엘리먼트를 찾아내는 선택자</p>
     </article>
 </body>
 </html>
